--- a/.env
+++ b/.env
@@ -21,7 +21,9 @@ APP_SECRET=cf4a240ca1a9f8ee960c7f3ed406e44d
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://student@bes-webdeveloper-seraing.be:demo_student@ssl0.ovh.net:587
+###>MAILER_DSN=smtp://student@bes-webdeveloper-seraing.be:demo_student@ssl0.ovh.net:587
+MAILER_DSN=gmail+smtps://debuggamingtfewebdev@gmail.com:vnfofqpcymuzsnvp@default 
+###>MAILER_DSN=gmail+smtp://debuggamingtfewebdev@gmail.com:N0mDeDi5uF5itCh7er:587 ###
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
